--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "E-Commerece Express API",
+  "name": "ecom-express-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
